# LiveFaceReco_RaspberryPi

./: .gitignore  CMakeLists.txt
src/: ApiShare_dll.cpp  livefacereco.cpp  livefacereco.hpp  main.cpp
src/Share2Python/: ApiShare_dll.cpp  CMakeLists.txt
